# Simple-render

./: CMakeLists.txt  main.cpp
inc/: core.h  pathtracer.h  scenes.h  utils.h
src/: core.cpp  main.cpp  pathtracer.cpp  scenes.cpp  utils.cpp
